--- a/index7.html
+++ b/index7.html
@@ -9,6 +9,7 @@
     <p>hey whats up</p>
     <p> lets go for a party</p>
     <img src="flag2.jpg">
+    <p>this is my second branch</p>
    
 </body>
 </html>
