--- a/index7.html
+++ b/index7.html
@@ -10,7 +10,9 @@
     <p> lets go for a party</p>
     <img src="flag2.jpg">
     <p>this is my second branch</p>
-
+   
+    <p>this is my second branch</p>
+    <p>this is my second branch</p>
     <p>this is my second branch</p>
 </body>
 </html>
